// The processing service definition.

// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative grpc/processing_service.proto

syntax = "proto3";

option go_package = "toy/grpc" ;

service ProcessingService {
  // Sends a greeting
  rpc Process (ProcessingRequest) returns (ProcessingReply) {}
  rpc Retrive (RetrivingRequest) returns (RetrivingReply) {}

}

message ProcessingRequest {
  string data = 1;
}

message ProcessingReply {
  string token = 1;
}

message RetrivingRequest {
  string token = 1;
}

message RetrivingReply {
  string data = 1;
}